# stochastic_matching

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  authors.html  contributing.html  coverage.html  genindex.html  history.html  index.html  installation.html  objects.inv  presentation.html  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: authors.doctree  contributing.doctree  coverage.doctree  history.doctree  index.doctree  installation.doctree  presentation.doctree  readme.doctree
.doctrees/companion/: first_steps.doctree  index.doctree  polytope.doctree  simulations.doctree
.doctrees/reference/: analysis.doctree  common.doctree  display.doctree  graphs.doctree  index.doctree  model.doctree  mq.doctree  (+2 more)
.github/: ISSUE_TEMPLATE.md
.run/: All tests.run.xml  Generate docs.run.xml
_modules/: index.html
_sources/: installation.md.txt
companion/: first_steps.html  index.html  polytope.html  simulations.html  simulations.ipynb
docs/: conf.py  index.md
reference/: analysis.html  common.html  display.html  graphs.html  index.html  model.html  mq.html  simulator.html  spectral.html
stochastic_matching/: __init__.py  analysis.py  common.py  display.py  graphs.py  model.py  spectral.py  stochastic_matching.py
tutorials/: analysis.html  graphs.html  graphs.ipynb  index.html  quickstart.html  quickstart.ipynb  reproducibility.html  simulator.html  simulator.ipynb  vertex_simulation.html  vertex_simulation.ipynb
(+137 files in other folders)
