[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochastic-matching"
version = "0.3.4"
description = "Stochastic Matching provides tools to analyze the behavior of stochastic matching problems."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
license = "MIT"
dependencies = [
    "cached-property>=2.0.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.6",
    "multiprocess>=0.70.18",
    "numba>=0.61.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/balouf/stochastic_matching"
Documentation = "https://balouf.github.io/stochastic_matching"

[dependency-groups]
dev = [
    "myst-parser[linkify]>=4.0.1",
    "nbsphinx>=0.9.7",
    "pydata-sphinx-theme>=0.16.1",
    "pytest-cov>=7.0.0",
    "sphinx-copybutton>=0.5.2",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["stochastic_matching"]

[tool.coverage.html]
directory = "cov"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov --cov-config=pyproject.toml --cov-report xml --cov-report html --showlocals --capture=no --exitfirst --failed-first"

